--- a/Main/Sandcastle/Components/Components.csproj
+++ b/Main/Sandcastle/Components/Components.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1F2EB9F1-1FE3-42F5-86BA-77EF369E11FE}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -77,6 +77,7 @@
       <HintPath>..\Output\System.Data.SQLite.DLL</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -152,14 +153,14 @@
     <None Include="..\Sandcastle.Assist.snk">
       <Link>Sandcastle.Assist.snk</Link>
     </None>
-    <None Include="BuilderComponents.cd" />
-    <None Include="Codes\Codes.cd" />
-    <None Include="Maths\Maths.cd" />
+    <None Include="Diagrams\BuilderComponents.cd" />
+    <None Include="Diagrams\Codes.cd" />
+    <None Include="Diagrams\Maths.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Snippets\Snippets.cd" />
+    <None Include="Diagrams\Snippets.cd" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
