Part of the reorganization of the projects

--- a/Development/SandcastleViewers/Viewers/Viewers.csproj
+++ b/Development/SandcastleViewers/Viewers/Viewers.csproj
@@ -23,7 +23,7 @@
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
     <AssemblyName>Sandcastle.Viewers</AssemblyName>
-    <AssemblyOriginatorKeyFile>..\Sandcastle.Utilities.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\Sandcastle.Viewers.snk</AssemblyOriginatorKeyFile>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
