Build Component Updates: 1. Fixed a tag closing bug in the current implementation of the logo. 2. Added logo support for the other styles; Prototype and Hana. 3. Started support for version information; will support both basic and custom (using the Sandcastle Version Builder).

--- a/Main/Source/Components/Components.csproj
+++ b/Main/Source/Components/Components.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="BuilderComponents.cs" />
     <Compile Include="BuilderController.cs" />
+    <Compile Include="BuilderExceptions.cs" />
     <Compile Include="BuilderStyle.cs" />
     <Compile Include="CodeComponent.cs" />
     <Compile Include="Codes\CodeController.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Maths\MathTeXPackage.cs" />
     <Compile Include="MediaComponent.cs" />
     <Compile Include="MediaLinks\MediaItem.cs" />
+    <Compile Include="Others\VersionInfo.cs" />
     <Compile Include="PostTransComponent.cs" />
     <Compile Include="PreTransComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
