Checking the missing sample files. After testing the source repository, I found some required files are missing.

--- a/Main/Samples/Helpers/SampleLibrary/SampleLibrary.csproj
+++ b/Main/Samples/Helpers/SampleLibrary/SampleLibrary.csproj
@@ -88,9 +88,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CodeSnippetSample.xml" />
     <Content Include="Project.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CodeSnippets.xsd" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
