This completes the Sandcastle Workshop check-in. Deleted some files and fixed assembly references that were pointing to an absolute path.

--- a/Applications/Workshop/Source/AddIns/ICSharpCode/CodeEditor/ICSharpCode.CodeEditor.csproj
+++ b/Applications/Workshop/Source/AddIns/ICSharpCode/CodeEditor/ICSharpCode.CodeEditor.csproj
@@ -12,6 +12,10 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DebugSymbols>true</DebugSymbols>
