--- a/Applications/Workshop/Source/AddIns/ICSharpCode/FormsDesigner/ICSharpCode.FormsDesigner.csproj
+++ b/Applications/Workshop/Source/AddIns/ICSharpCode/FormsDesigner/ICSharpCode.FormsDesigner.csproj
@@ -21,6 +21,10 @@
     <BaseAddress>108003328</BaseAddress>
     <FileAlignment>4096</FileAlignment>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <Optimize>True</Optimize>
