--- a/Applications/Workshop/Source/Libraries/ICSharpCode.TextEditor/ICSharpCode.TextEditor.csproj
+++ b/Applications/Workshop/Source/Libraries/ICSharpCode.TextEditor/ICSharpCode.TextEditor.csproj
@@ -20,6 +20,10 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <FileAlignment>4096</FileAlignment>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Optimize>False</Optimize>
