--- a/Applications/Workshop/Source/Main/ICSharpCode.SharpDevelop.Dom/ICSharpCode.SharpDevelop.Dom.csproj
+++ b/Applications/Workshop/Source/Main/ICSharpCode.SharpDevelop.Dom/ICSharpCode.SharpDevelop.Dom.csproj
@@ -23,6 +23,10 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <RunCodeAnalysis>False</RunCodeAnalysis>
     <CodeAnalysisRules>-Microsoft.Design#CA1002;-Microsoft.Design#CA1063;-Microsoft.Performance#CA1800;-Microsoft.Security#CA2104</CodeAnalysisRules>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <IntermediateOutputPath>obj\Debug\</IntermediateOutputPath>
