--- a/Applications/Workshop/Source/Main/ICSharpCode.SharpDevelop.Widgets/ICSharpCode.SharpDevelop.Widgets.csproj
+++ b/Applications/Workshop/Source/Main/ICSharpCode.SharpDevelop.Widgets/ICSharpCode.SharpDevelop.Widgets.csproj
@@ -36,6 +36,10 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <Optimize>False</Optimize>
