--- a/Applications/Workshop/Source/Main/ICSharpCode.SharpDevelop/ICSharpCode.SharpDevelop.csproj
+++ b/Applications/Workshop/Source/Main/ICSharpCode.SharpDevelop/ICSharpCode.SharpDevelop.csproj
@@ -41,6 +41,10 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <RootNamespace>ICSharpCode.SharpDevelop</RootNamespace>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DebugType>Full</DebugType>
