--- a/Applications/Workshop/Source/Main/ICSharpCode.StartUp/ICSharpCode.StartUp.csproj
+++ b/Applications/Workshop/Source/Main/ICSharpCode.StartUp/ICSharpCode.StartUp.csproj
@@ -28,6 +28,10 @@
     <StartupObject>
     </StartupObject>
     <RootNamespace>ICSharpCode.SharpDevelop</RootNamespace>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>Full</DebugType>
