--- a/Applications/Workshop/Source/AddIns/ICSharpCode/AddInManager/ICSharpCode.AddInManager.csproj
+++ b/Applications/Workshop/Source/AddIns/ICSharpCode/AddInManager/ICSharpCode.AddInManager.csproj
@@ -35,6 +35,10 @@
     <IsWebBootstrapper>true</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>..\..\..\..\Output\AddIns\AddInManager\</OutputPath>
