--- a/Applications/Workshop/Source/AddIns/ICSharpCode/CSharpBinding/ICSharpCode.CSharpBinding.csproj
+++ b/Applications/Workshop/Source/AddIns/ICSharpCode/CSharpBinding/ICSharpCode.CSharpBinding.csproj
@@ -36,6 +36,10 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <RootNamespace>CSharpBinding</RootNamespace>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
