--- a/Applications/Workshop/Source/AddIns/ICSharpCode/VBNetBinding/ICSharpCode.VBNetBinding.csproj
+++ b/Applications/Workshop/Source/AddIns/ICSharpCode/VBNetBinding/ICSharpCode.VBNetBinding.csproj
@@ -35,6 +35,10 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <RootNamespace>VBNetBinding</RootNamespace>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
