--- a/Applications/Workshop/Source/AddIns/ICSharpCode/XmlEditor/ICSharpCode.XmlEditor.csproj
+++ b/Applications/Workshop/Source/AddIns/ICSharpCode/XmlEditor/ICSharpCode.XmlEditor.csproj
@@ -39,6 +39,10 @@
     <IsWebBootstrapper>true</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Optimize>False</Optimize>
