--- a/Applications/Workshop/Source/Libraries/ICSharpCode.Build.Tasks/ICSharpCode.Build.Tasks.csproj
+++ b/Applications/Workshop/Source/Libraries/ICSharpCode.Build.Tasks/ICSharpCode.Build.Tasks.csproj
@@ -22,6 +22,10 @@
     <OldToolsVersion>2.0</OldToolsVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>..\..\..\Output\</OutputPath>
