--- a/Applications/Workshop/Source/Libraries/ICSharpCode.Controls/ICSharpCode.Controls.csproj
+++ b/Applications/Workshop/Source/Libraries/ICSharpCode.Controls/ICSharpCode.Controls.csproj
@@ -9,14 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Aga.Controls</RootNamespace>
     <AssemblyName>ICSharpCode.Controls</AssemblyName>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>ICSharpCode.Controls.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
