--- a/Applications/Workshop/Source/Sandcastle/Workshop/Sandcastle.Workshop.csproj
+++ b/Applications/Workshop/Source/Sandcastle/Workshop/Sandcastle.Workshop.csproj
@@ -8,6 +8,10 @@
     <AssemblyName>Sandcastle.Workshop</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
