Workshop: The back port of the XmlEditor 4.0 is now completed. Multi-file  XML schema is now supported, the auto-completion of the <link/> tag attributes now works. After entering an XML tag attribute, if it is enumeration type, the auto-complete dialog is now displayed. The XmlView is reworked to avoid calling virtual methods in the constructor, with methods added for deriving classes to provide their own schemas. Using the above improvements, the MamlTextEditor now loads the Sandcastle conceptual schema directly from the Sandcastle directory. If not found, the current consolidated schema is used.

--- a/Applications/Workshop/Source/AddIns/ICSharpCode/XmlEditor/ICSharpCode.XmlEditor.csproj
+++ b/Applications/Workshop/Source/AddIns/ICSharpCode/XmlEditor/ICSharpCode.XmlEditor.csproj
@@ -85,6 +85,15 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Commands\XPathQueryPadCommand.cs" />
+    <Compile Include="Completion\IXmlSchemaCompletionFactory.cs" />
+    <Compile Include="Completion\XmlCompleteAttributeValueEventArgs.cs" />
+    <Compile Include="Completion\XmlSchemaError.cs" />
+    <Compile Include="Completion\XmlSchemaProvider.cs" />
+    <Compile Include="Completion\XmlSchemaFileAssociationList.cs" />
+    <Compile Include="Completion\XmlSchemaFileAssociation.cs" />
+    <Compile Include="Completion\XmlSchemaFileAssociations.cs" />
+    <Compile Include="FileSystem.cs" />
+    <Compile Include="IFileSystem.cs" />
     <Compile Include="Parser\XmlElementPathsByNamespace.cs" />
     <Compile Include="Parser\XmlNamespace.cs" />
     <Compile Include="Parser\XmlNamespaceCollection.cs" />
@@ -121,6 +130,8 @@
     <Compile Include="Completion\XmlSchemaCompletion.cs" />
     <Compile Include="Completion\XmlSchemaCompletionCollection.cs" />
     <Compile Include="Commands\XmlTreeViewCommands.cs" />
+    <Compile Include="XmlEditorOptions.cs" />
+    <Compile Include="XmlEditorService.cs" />
     <Compile Include="XmlFoldingStrategy.cs" />
     <Compile Include="Parser\QualifiedName.cs" />
     <Compile Include="Parser\XmlElementPath.cs" />
@@ -130,7 +141,6 @@
     <Compile Include="XmlFormattingStrategy.cs" />
     <Compile Include="XmlSecondaryView.cs" />
     <Compile Include="XmlView.cs" />
-    <Compile Include="Completion\XmlSchemaManager.cs" />
     <Compile Include="Parser\Parser.cs" />
     <Compile Include="Commands\ValidateXmlCommand.cs" />
     <Compile Include="OptionsPanel\XmlSchemaListBoxItem.cs" />
